--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,16 @@ body {
 	height: 100%;
 	text-align: center;
 }
+#webpage_header {
+	padding-bottom: 10px;
+}
+#webpage_title {
+	font-size: 48px;
+	font-weight: bold;
+}
+#webpage_subtitle {
+	font-size: 36px;
+}
 #webpage_top{
 	height: 20%;
 }
@@ -70,4 +80,7 @@ body {
 	display: block;
 	width: 50%;
 	cursor: pointer;
+}
+.bold {
+	font-weight: bold;
 }
