--- a/Jooblee/css/style.css
+++ b/Jooblee/css/style.css
@@ -1,3 +1,13 @@
+body {
+	margin: 0;
+}
+button {
+	-webkit-appearance: none; 
+    -moz-appearance: none;
+    appearance: none;  
+    background: transparent;
+    border: 0;
+}
 #full-screen {
 	width: 100%;
 	height: 100%;
@@ -5,7 +15,7 @@
 }
 #full-screen td {
 	text-align: center;
-	border: 1px solid black;
+	font-size: 36px;
 }
 #header-area {
 	background-color: #250045;
@@ -13,9 +23,11 @@
 }
 #header-area td:nth-child(1) {
 	width: 25%;
+	float: left;
 }
 #header-area td:nth-child(2) {
 	width: 75%;
+	text-align: left; 
 }
 #tabs-area {
 	background-color: #250045;
@@ -23,14 +35,16 @@
 }
 #map-area {
 	background-color: gray;
-	height: 50%;
+	height: 41%;
 }
 #icons-area {
 	background-color: white;
-	height: 7%;
+	height: 13%;
 }
 #icons-area td{
 	width: 50%;
+	padding-right: 5px;
+	padding-left: 5px;
 }
 #map-icon {
 	width: 25%;
@@ -41,13 +55,13 @@
 	float: left;
 }
 #dropdown-area {
-	height: 7%;
+	height: 13%;
 }
 #dropdown-area td {
 	width: 33%;
 }
 #dropdown {
-	width: 50%;
+	width: 75%;
 	height: 75%;
 	-webkit-appearance: none; 
     -moz-appearance: none;
@@ -56,14 +70,13 @@
 	border: 1px solid #250045;
 }
 #search-area {
-	height: 7%;
+	height: 13%;
 }
 #search-area td {
-	height: 7%;
 	width: 33%;
 }
 #search {
-	width: 50%;
+	width: 75%;
 	height: 75%;
 	background-color: #250045;
 	border-radius: 5px;
